Feature: add CLI interface (#22)
* feature: added updated API calls

* fix: fixed bugs

* fix: fixed bugs

* fix: fixed bugs

* fix: fixed bugs

* fix: fixed bugs